@@ -25,5 +25,6 @@ int32_t boundary(int32_t exp, int32_t n);
 uint8_t *init_4b(uint32_t val, uint8_t *b);
 uint8_t *init_4l(uint32_t val, uint8_t *b);
 uint8_t *init_2b(uint32_t val, uint8_t *b);
+void set_thread_name(char *thread_name);
 
 #endif
