@@ -1,4 +1,5 @@
 xxxx-xx-xx : Version -next
+ * Set thread names under Linux.
  * notify: Added no_code_word/code_word_ok events.
  * notify: Added input_timeout/input_ok events.
  * notify: Added start/stop events.
